--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/path-browserify": "^1.0.0",
     "debounce": "^1.2.1",
     "electron-updater": "^4.6.5",
+    "node-fs-extra": "^0.8.2",
     "path-browserify": "^1.0.1",
     "prism-themes": "^1.9.0",
     "sass": "^1.56.0",
