--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron-updater": "^4.6.5",
     "install": "^0.13.0",
     "npm": "^9.1.3",
+    "pinia": "^2.0.27",
     "sass": "^1.56.1"
   },
   "devDependencies": {
