--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@milkdown/preset-gfm": "^6.5.0",
     "@milkdown/theme-nord": "^6.5.0",
     "@milkdown/vue": "^6.5.4",
+    "@types/mousetrap": "^1.6.11",
     "debounce": "^1.2.1",
     "electron-updater": "^4.6.5",
     "install": "^0.13.0",
+    "mousetrap": "^1.6.5",
     "npm": "^9.1.3",
     "pinia": "^2.0.27",
     "prism-themes": "^1.9.0",
