--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "install": "^0.13.0",
     "mousetrap": "^1.6.5",
     "npm": "^9.1.3",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.27",
     "prism-themes": "^1.9.0",
     "sass": "^1.56.1"
