解决了文件搜索,新建文件错误样式,app图标,跨组件通信(使用自定义eventbus)等问题

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "milk",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "qirong77",
   "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
